@@ -876,3 +876,4 @@ o Updated bashing areas -Nemi
 o Updated shadoweaver aliases -Aidan
 o Added a tether summon alias 'teths' -Gianna
 o Added a sunspear defense -Raelyr
+o Added some functions to check inventory/vault/IH -Naftali
